--- a/style.css
+++ b/style.css
@@ -22,3 +22,66 @@
   content: " *";
   display: inline;
 }
+.container1 {
+  width: 300px;
+  /* background: #111; */
+  padding: 10px 20px;
+  /* border: 1px solid #444; */
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  /* flex-direction: column; */
+}
+.container1 .star-widget input {
+  display: none;
+}
+
+.star-widget label {
+  font-size: 30px;
+  color: #444;
+  padding: 5px;
+  float: right;
+  transition: all 0.2s ease;
+}
+input:not(:checked) ~ label:hover,
+input:not(:checked) ~ label:hover ~ label {
+  color: #fd4;
+}
+input:checked ~ label {
+  color: #fd4;
+}
+input#rate-5:checked ~ label {
+  color: #fe7;
+  text-shadow: 0 0 20px #952;
+}
+#rate-1:checked ~ form header:before {
+  content: "I just hate it ";
+}
+#rate-2:checked ~ form header:before {
+  content: "I don't like it ";
+}
+#rate-3:checked ~ form header:before {
+  content: "It is awesome ";
+}
+#rate-4:checked ~ form header:before {
+  content: "I just like it ";
+}
+#rate-5:checked ~ form header:before {
+  content: "I just love it ";
+}
+.container form {
+  display: none;
+}
+input:checked ~ form {
+  display: block;
+}
+
+.submit {
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  text-shadow: #444;
+  text-size-adjust: 5px;
+}
